--- a/Prime-number_frequency.ipynb
+++ b/Prime-number_frequency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,10 @@
     "def get_random_number(n_digits):\n",
     "    n = ''\n",
     "    for i in range(n_digits):\n",
-    "        n = n + str(random.randint(0,9))\n",
+    "        if i == 0:\n",
+    "            n = n + str(random.randint(1,9))\n",
+    "        else:\n",
+    "            n = n + str(random.randint(0,9))\n",
     "    return int(n)\n",
     "\n",
     "\n",
@@ -59,20 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In average, for numbers with 12 digits, 23 steps needed to find next prime number.\n",
-      "farthest number from a prime number with 12 is 444402713708 which requires 171 steps to find next prime number.\n"
+      "In average, for numbers with 3 digits, 3 steps needed to find next prime number.\n",
+      "farthest number from a prime number with 3 digits is 888 which requires 19 steps to find next prime number.\n"
      ]
     }
    ],
    "source": [
-    "n_digits = 12\n",
+    "n_digits = 3\n",
     "n_iteration = 1000\n",
     "\n",
     "furthest_number = None\n",
@@ -81,6 +84,7 @@
     "required_steps_list = []\n",
     "for idx in range(n_iteration):\n",
     "    number = get_random_number(n_digits)\n",
+    "    # print(number)\n",
     "    steps_required = get_next_prime_number(number)[1]\n",
     "    if steps_required > max_steps_required:\n",
     "        furthest_number = number\n",
@@ -94,7 +98,7 @@
     "average_steps_required = int(sum(required_steps_list) / len(required_steps_list))\n",
     "\n",
     "print(f\"In average, for numbers with {n_digits} digits, {average_steps_required} steps needed to find next prime number.\") \n",
-    "print(f\"farthest number from a prime number with {n_digits} is {furthest_number} which requires {max_steps_required} steps to find next prime number.\")"
+    "print(f\"farthest number from a prime number with {n_digits} digits is {furthest_number} which requires {max_steps_required} steps to find next prime number.\")"
    ]
   },
   {
