--- a/Prime-number_frequency.ipynb
+++ b/Prime-number_frequency.ipynb
@@ -62,20 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In average, for numbers with 3 digits, 3 steps needed to find next prime number.\n",
-      "farthest number from a prime number with 3 digits is 888 which requires 19 steps to find next prime number.\n"
+      "In average, for numbers with 7 digits, 12 steps needed to find next prime number.\n",
+      "furthest number from a prime number with 7 digits is 4738652 which requires 125 steps to find next prime number.\n"
      ]
     }
    ],
    "source": [
-    "n_digits = 3\n",
+    "n_digits = 7\n",
     "n_iteration = 1000\n",
     "\n",
     "furthest_number = None\n",
@@ -98,7 +98,7 @@
     "average_steps_required = int(sum(required_steps_list) / len(required_steps_list))\n",
     "\n",
     "print(f\"In average, for numbers with {n_digits} digits, {average_steps_required} steps needed to find next prime number.\") \n",
-    "print(f\"farthest number from a prime number with {n_digits} digits is {furthest_number} which requires {max_steps_required} steps to find next prime number.\")"
+    "print(f\"furthest number from a prime number with {n_digits} digits is {furthest_number} which requires {max_steps_required} steps to find next prime number.\")"
    ]
   },
   {
